plugins/editorconfig/testData/org/editorconfig/language/parser/valid/optionWithEmptyRawValue.editorconfig
[*.cs]
file_header_template =
charset=utf-8
