plugins/editorconfig/testData/org/editorconfig/language/parser/invalid/malformedQualifiedKey.editorconfig
[foo]
hello.world.IntellijIdeaRulezzz
charset=utf-8
